# photoPi

./: .gitignore  CMakeLists.txt  Makefile  client.sh  dataSourceTestConfig.h.in  photoPi  server.sh
include/: controlDataSource.h  dataSource.h
src/: controlDataSource.cpp  dataSource.cpp  main.cpp
